--- a/views/about.html
+++ b/views/about.html
@@ -38,7 +38,8 @@
                 <div class="card-body">
                     <ul class="lead text-light">
                         <li>F2F network. End to end encryption;</li>
-                        <li>Package transfer in blockchain;</li>
+                        <li>Direct/Hidden connection;</li>
+                        <li>File transfer supported;</li>
                     </ul>
                 </div>
             </div>
