--- a/views/index.html
+++ b/views/index.html
@@ -64,7 +64,7 @@
             <div class="row">
                 <div class="text-light col-lg-12 mx-auto">
                     <!-- HOME PAGE -->
-                    {{ template "home_page" }}
+                    {{ template "home_page" .UPDATE }}
 
                     <!-- ABOUT PAGE -->
                     {{ template "about_page" }}
@@ -121,7 +121,7 @@
         <footer class="navbar fixed-bottom py-3 bg-dark">
             <div class="container">
                 <p class="m-0 text-center text-secondary">Remake by #571</p>
-                <p class="navbar-nav ml-auto text-secondary">Version 1.0.3s</p>
+                <p class="navbar-nav ml-auto text-secondary">Version 1.0.4s</p>
             </div>
         </footer>
         <router-view></router-view>
