update to 1.0.5s version

--- a/views/about.html
+++ b/views/about.html
@@ -40,12 +40,13 @@
                         <li>F2F network. End to end encryption;</li>
                         <li>Direct/Hidden connection;</li>
                         <li>File transfer supported;</li>
+                        <li>Email exchange supported;</li>
                     </ul>
                 </div>
             </div>
-      </div>
-      
-      <div class="card bg-dark">
+        </div>
+
+        <div class="card bg-dark">
             <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
                     <button class="btn btn-link text-info" type="button" data-toggle="collapse" data-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
@@ -57,7 +58,7 @@
                 <div class="card-body">
                     <ul class="lead text-light">
                         <li>Symmetric: AES256-CBC;</li>
-                        <li>Asymmetric: RSA2048-OAEP;</li>
+                        <li>Asymmetric: RSA3072-OAEP;</li>
                         <li>Hash function: HMAC(SHA256);</li>
                     </ul>
                 </div>
