--- a/views/account.html
+++ b/views/account.html
@@ -23,13 +23,12 @@
         </div>
     </div>
     <pre class="text-white lead">
-Address: "${conndata.address}".
-Username: "${authdata.username}".
-Hashname: "${conndata.hashname}".
+Address: "${conndata.address}";
+Username: "${authdata.username}";
+Hashname: "${conndata.hashname}";
 
 Public Key: 
-<p ref="publickey">${conndata.public_key}</p>
-Certificate:
+<p ref="publickey">${conndata.public_key}</p>Certificate:
 <p ref="certificate">${conndata.certificate}</p></pre>
     <br>
     <div class="form-group row">
