--- a/views/email.html
+++ b/views/email.html
@@ -16,7 +16,7 @@ ${emaildata.info.incoming ? 'Incoming' : 'Outgoing'};
 Sender: "${emaildata.email.head.sender.hashname}";
 Receiver: "${emaildata.email.head.receiver}";
 --------------------------------------------------------------
-Message: "${emaildata.email.body.data}";
+Message: ${emaildata.email.body.data}
 --------------------------------------------------------------
 Time: "${emaildata.info.time}";
 Rand: "${emaildata.email.body.desc.rand}";
