--- a/views/chat.html
+++ b/views/chat.html
@@ -50,11 +50,11 @@
                             <div class="h-100 col-md-12 my-auto">
                                 <div class="h-75 white">
                                     <div class="h-100 form-group basic-textarea">
-                                        <textarea id="chat-textarea" class="h-75 form-control bg-dark pl-2 my-0 text-white" id="exampleFormControlTextarea2" v-model="netdata.message" rows="3" placeholder="Type your message here..." v-on:keyup="keycheck"></textarea>
+                                        <textarea id="chat-textarea" class="h-75 form-control bg-dark pl-2 my-0 text-white" id="exampleFormControlTextarea2" v-model="netdata.message" rows="3" placeholder="Type your message here..." @keyup.enter="sendmsg(netdata.chat.companion, netdata.message)"></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" @click="sendmsg()" class="h-100 btn bg-success text-white w-100 btn-outline-pink btn-rounded btn-sm waves-effect waves-dark float-right">Send message</button>
+                                    <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" @click="sendmsg(netdata.chat.companion, netdata.message)" class="h-100 btn bg-success text-white w-100 btn-outline-pink btn-rounded btn-sm waves-effect waves-dark float-right">Send message</button>
                                 </div>
                             </div>
                         </div>
