add auto clear connections

--- a/views/email.html
+++ b/views/email.html
@@ -21,6 +21,7 @@ Message: ${emaildata.email.body.data}
 Time: "${emaildata.info.time}";
 Rand: "${emaildata.email.body.desc.rand}";
 Hash: "${emaildata.email.body.desc.hash}";
+Sign: "${emaildata.email.body.desc.sign}";
 Nonce: "${emaildata.email.body.desc.nonce}";
 Difficulty: "${emaildata.email.body.desc.difficulty}";
 --------------------------------------------------------------
