--- a/views/network.html
+++ b/views/network.html
@@ -3,15 +3,20 @@
     <h2 class="text-center">Network</h2><br>
     {{ template "message_part" }}
     <div class="text-center mx-auto">
+        <div class="form-group">
+            <router-link to="/network/email">
+                <button class="btn btn-secondary w-100" @click="email('null')">Emails</button>
+            </router-link>
+        </div>
         <div class="form-group row">
             <div class="col-md-6">
-                <router-link to="/network/chat">
-                    <button class="btn btn-secondary w-100" @click="chat('null')">Chat room</button>
+                <router-link :to="{name: 'globalchatlist'}">
+                    <button class="btn btn-secondary w-100" @click="globalchat('null')">Group Chats</button>
                 </router-link>
             </div>
             <div class="col-md-6">
-                <router-link to="/network/email">
-                    <button class="btn btn-secondary w-100" @click="email('null')">Emails</button>
+                <router-link to="/network/chat">
+                    <button class="btn btn-secondary w-100" @click="chat('null')">Private Chats</button>
                 </router-link>
             </div>
         </div>
