--- a/views/settings.html
+++ b/views/settings.html
@@ -3,27 +3,20 @@
     <h2 class="text-center">Settings</h2><br>
     {{ template "message_part" }}
     <div class="text-center mx-auto">
-
+        <div class="form-group">
+            <button v-if="switcher=='download'"  @click="setswitch('download')" type="button" class="btn btn-danger w-100">Action</button>
+            <button v-else  @click="nullconn(), setswitch('download')" type="button" class="btn btn-secondary w-100">Install</button>
+        </div>
         <div class="text-center form-group row">
-            <div class="col-md-6">
-                <button v-if="switcher=='download'"  @click="setswitch('download')" type="button" class="btn btn-danger w-100">Action</button>
-                <button v-else  @click="nullconn(), setswitch('download')" type="button" class="btn btn-secondary w-100">Install</button>
-            </div>
             <div class="col-md-6">
                 <button v-if="switcher=='findconnect'"  @click="setswitch('findconnect')" type="button" class="btn btn-danger w-100">Action</button>
                 <button v-else  @click="nullconn(), setswitch('findconnect')" type="button" class="btn btn-secondary w-100">Hidden connect</button>
             </div>
-        </div>
-
-        <!-- <div class="text-center form-group">
-            <button v-if="switcher=='findconnect'"  @click="setswitch('findconnect')" type="button" class="btn btn-danger w-100">Action</button>
-            <button v-else  @click="nullconn(), setswitch('findconnect')" type="button" class="btn btn-secondary w-100">Hidden connection</button>
             <div class="col-md-6">
-                 <button v-if="switcher=='hiddenconnect'"  @click="setswitch('hiddenconnect')" type="button" class="btn btn-danger w-100">Action</button>
-                <button v-else  @click="nullconn(), setswitch('hiddenconnect')" type="button" class="btn btn-secondary w-100">Hidden connect</button>
+                <button v-if="switcher=='disconnect'"  @click="setswitch('disconnect')" type="button" class="btn btn-danger w-100">Action</button>
+                <button v-else  @click="nullconn(), setswitch('disconnect')" type="button" class="btn btn-secondary w-100">Disconnect</button>
             </div>
-        </div> -->
-
+        </div>
         <div v-if="switcher=='download'" class="text-center form-group">
             <form id="feedbackForm" class="text-center">
                 <div class="form-group w-100">
@@ -41,7 +34,6 @@
                 <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="installfile(conndata.hashname, filedata.hash)">Install</button>
             </form>
         </div>
-
         <div v-if="switcher=='findconnect'" class="text-center form-group">
             <form id="feedbackForm" class="text-center">
                 <div class="form-group w-100">
@@ -50,22 +42,17 @@
                 <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="findconnect(conndata.public_key)">Hidden connect</button>
             </form>
         </div>
-
-        <!-- <div v-if="switcher=='hiddenconnect'" class="text-center form-group">
+        <div v-if="switcher=='disconnect'" class="text-center form-group">
             <form id="feedbackForm" class="text-center">
                 <div class="form-group w-100">
                     <select v-model="conndata.hashname" class="browser-default custom-select text-light bg-secondary w-100">
                         <option disabled value="">Choose hashname</option>
-                        <option v-for="user in userdata.connects" v-bind:value="user.hashname" v-if="!user.hidden">${user.hashname}</option>
+                        <option v-for="user in userdata.connects" v-if="user.connected" v-bind:value="user.hashname">${user.hashname}</option>
                     </select>
                 </div>
-                <div class="form-group w-100">
-                    <textarea class="form-control bg-dark text-light" placeholder="PEM Public Key Format" v-model="conndata.public_key"></textarea>
-                </div>
-                <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="hiddenconnect(conndata.hashname, conndata.public_key)">Hidden connect</button>
+                <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="disconnect(conndata.hashname)">Disconnect</button>
             </form>
-        </div> -->
-
+        </div>
         <div class="mx-auto w-100">
             <ul class="list-unstyled chat-1 scrollbar-light-blue">
                 <li v-for="user in userdata.connects">
